Fixed issue where page would scroll horizontally on mobile devices when it wasent supposed to.

--- a/SweetStyles.css
+++ b/SweetStyles.css
@@ -120,6 +120,9 @@ button:hover {
     #overlay {
         height: 100%;
     }
+    .sectionSeperator {
+        width:  100%;
+    }
 }
 
 .shortLine {
